# python-project-lvl4

./: .gitignore  Makefile  README.md  data.json  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-ci.yml
labels/: forms.py  tables.py  urls.py  views.py
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: forms.py  models.py  tables.py  urls.py  views.py
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: models.py  tables.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: models.py  tables.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_auto_20220818_0115.py
task_manager/tasks/: filters.py  forms.py  models.py  tables.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_auto_20220818_0115.py  0003_auto_20220819_2210.py
task_manager/users/: admin.py  forms.py  models.py  tables.py  urls.py  views.py
tasks/: filters.py  forms.py  models.py  tables.py  urls.py  views.py
templates/: base.html  common_form.html  delete.html  home.html  login.html  registration.html  users.html
templates/labels/: change.html  create.html  delete.html  labels_list.html  update.html
templates/registration/: signup.html
templates/statuses/: change.html  create.html  delete.html  statuses_list.html  update.html
templates/tasks/: change.html  create.html  delete.html  tasks_list.html  update.html  view_task.html
templates/users/: signup.html  tmuser_confirm_delete.html  tmuser_form.html  user_delete.html  user_update.html
tests/: conftest.py  test_labels.py  test_statuses.py  test_tasks.py  test_users.py  tests.py
users/: admin.py  forms.py  models.py  tables.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: detail.html  index.html  user_update.html
