[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager system"
authors = ["AABur <aabur@mail.ru>"]
license = "MIT"
packages = [
    { include = 'task_manager' },
]


[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
python-dotenv = "^0.19.0"
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"
django-bootstrap4 = "^3.0.1"
django-tables2 = "^2.4.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"
flake8-colors = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
