[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager system"
authors = ["AABur <aabur@mail.ru>"]
license = "MIT"
packages = [
    { include = 'task_manager' },
]


[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
python-dotenv = "^0.19.0"
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"
django-bootstrap4 = "^3.0.1"
django-tables2 = "^2.4.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"
flake8-colors = "^0.1.9"
autopep8 = "^1.5.7"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"
pytest-sugar = "^0.9.4"
pytest-clarity = "^1.0.1"
pytest = "^6.2.5"
django-coverage-plugin = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
