[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager system"
authors = ["AABur <aabur@mail.ru>"]
license = "MIT"
packages = [
    { include = 'task_manager' },
]


[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.14"
python-dotenv = "^0.19.0"
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"
django-bootstrap4 = "^3.0.1"
django-tables2 = "^2.4.0"
django-filter = "^22.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"
flake8-colors = "^0.1.9"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"
pytest-sugar = "^0.9.4"
pytest-clarity = "^1.0.1"
pytest = "^6.2.5"
django-coverage-plugin = "^2.0.3"
pyformat = "^0.7"
isort = "^5.10.1"
add-trailing-comma = "^2.2.3"
flake8-pytest = "^1.4"
flake8-pytest-style = "^1.6.0"
flake8-django = "^1.1.5"
django-migration-linter = "^4.1.0"
yamllint = "^1.27.1"
dotenv-linter = "^0.3.0"
polint = "^0.4"
dennis = "^1.1.0"
# django-stubs = "^1.12.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
